--- a/patient-clinician-workshop/pccworkshop.bib
+++ b/patient-clinician-workshop/pccworkshop.bib
@@ -23,3 +23,10 @@
   pages={291},
   year={2008}
 }
+
+@article{wilson1989introspection,
+  title={Introspection, attitude change, and attitude-behavior consistency: The disruptive effects of explaining why we feel the way we do.},
+  author={Wilson, T.D. and Dunn, D.S. and Kraft, D. and Lisle, D.J.},
+  year={1989},
+  publisher={Academic Press}
+}
