--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -176,6 +176,16 @@ response could be useful for tracking progress along an clinician
 prescribed intervention, recovery from illness, or onset of new
 conditions, be used to pinpoint sources of prolonged stress.
 
+Merely providing access to such activity records back to individuals
+could have direct effects on people's behavior, motivation and
+perceived well-being.  For example, just as asking individuals to
+introspect and justify their opinions and feelings has been found to
+be both disruptive and reinforcing of their opinions
+\cite{wilson1989introspection}, allowing people to reflect upon their
+historical records of their activities might help people realize or
+change their minds about how or why they feel particular ways. We feel
+that there is significant room for investigation here, and potential
+for research pertaining to self motivation and improvement.
 
 \section{Capturing activity diaries}
 
