--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -222,17 +222,22 @@ metrics.
 %% Temperature and Galvanic Skin Response\footnote{BodyMedia Core 2, temperature and GSR sensor: \newline \indent \indent \indent  \url{http://www.bodymedia.com}}.
 %% The diet aspect of weight loss is also covered, by products such as a wireless fork that informs you how long you spent eating\footnote{HapiLabs HapiFork: \newline \indent \indent \indent  \url{http://hapilabs.com/products-hapifork.asp}}.
 
+
 \section{Storing and Representing Activity Diaries}
 
-Currently these products are designed to work in isolation, that is, to upload sensor measurements to dedicated web sites set up by each device's manufacturer.  Such sites are poorly suited for the long-term storage for the highly personal activity data for several reasons; first, none of the sites provide any long-term retention or access guarantees of user data (nor HIPAA security guarantees).  Second, it is difficult for a user to gain a unified understanding of their activity across their devices through the disparate interfaces provided by these services, due of the widely different visual and interface representations provided. Finally, many of these visualisations represent user activity in arbitrary, 'user-friendly' units, such as 'Sleep score', 'Fuel', ``Zen level'', which, being not rigorously defined are difficult or impossible to compare across services.
+Currently these products are designed to work in isolation, that is, to upload sensor measurements to dedicated web sites set up by each device's manufacturer.  Such sites are poorly suited for the long-term storage for the highly personal activity data for several reasons; first, none of the sites provide any long-term retention or access guarantees of user data (nor HIPAA security guarantees).  Second, it is difficult for a user to gain a unified understanding of their activity across their devices through the disparate interfaces provided by these services, due of the widely different visual and interface representations provided. Finally, many of these visualisations represent user activity in arbitrary, ``user-friendly'' units, such as ``Sleep score'', ``Fuel'', ``Zen level'', which, being not rigorously defined are difficult or impossible to compare across services.
 
-Fortunately, many of these sites have APIs that provide access to the raw sensor data, making it feasible to access and interpret captured data.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single reprsentation kept with their EHR.  In particular, grounding this activity data in a uniform, common taxonomy and description logic, like those provided for medical diagnoses and diseases through SNOWMED-CT \cite{stearns2001snomed} and ICD-10 \cite{world1993icd}, would enable these diaries to interpretable by future clinical medical systems, such as primary care information management systems. 
-
-The data collected by patients' devices has the potential to create a large volume of highly structured data. This is in contrast to
-EHRs which tend to contain individual records for each clinical session.
+Fortunately, many of these sites have APIs that provide access to the raw sensor data, making it feasible to access and interpret captured data.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single representation kept with their EHR.  In particular, grounding this activity data in a uniform, common taxonomy and description logic, like those provided for medical diagnoses and diseases through SNOMED-CT \cite{stearns2001snomed} and ICD-10 \cite{world1993icd}, would enable these diaries to interpretable by future clinical medical systems, such as primary care information management systems. 
 
 To this challenge we bring our contribution of a common ontology for recording and encompassing patient activities, which we have begun to
-connect to SNOMED-CT, in order to enable semantic interoperability with existing systems.
+connect to SNOMED-CT, in order to enable semantic interoperability with existing systems, and provide a common vocabulary across devices.
+
+The data collected by patients' devices has the potential to create a large volume of highly structured data. Some sensors
+are collecting minute-by-minute data values form multiple sensors 24 hours a day, whereas 
+EHRs tend to contain individual records for each clinical session. Therefore, existing methods of storing EHRs may
+prove to be unsuitable for the large volumes of data from activity diaries. However, integrating with existing EHRs
+would enable clinicians and patients to view the data in context. 
+
 
 
 
