--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -187,23 +187,10 @@ change their minds about how or why they feel particular ways. We feel
 that there is significant room for investigation here, and potential
 for research pertaining to self motivation and improvement.
 
-\section{Capturing activity diaries}
-
-The recent proliferation in personal wearable activity sensors and
-network and storage- enabled digital health measurement devices has
-been driven by both the falling costs of embeddable electronics, and a
-surging public interest in ``quantified-self''-style self-monitoring
-for self-improvement.  Many of these sensors are lightweight, can be
-worn discreetly, measure several physiological statistics
-simultaneously, and most require little maintenance. Table
-\ref{sensors} lists a variety of such sensors, currently available
-readily from online retailers.
-
-\newpage
-
 \marginpar{
 \begin{table}
 \small
+\vspace{0.5cm}
 \begin{tabular}{p{3cm}  p{6cm} p{1.5cm}}
 
 product & measurement indices & price range (approx. USD) \\
@@ -223,6 +210,21 @@ Hapifork & eating time, rate, frequency & (TBD) \\
 \end{table}
 }
 \vspace{6cm}
+
+
+\section{Capturing activity diaries}
+
+The recent proliferation in personal wearable activity sensors and
+network and storage- enabled digital health measurement devices has
+been driven by both the falling costs of embeddable electronics, and a
+surging public interest in ``quantified-self''-style self-monitoring
+for self-improvement.  Many of these sensors are lightweight, can be
+worn discreetly, measure several physiological statistics
+simultaneously, and most require little maintenance. Table
+\ref{sensors} lists a variety of such sensors, currently available
+readily from online retailers.
+
+
 
 
 While few of these devices had been independently evaluated for
