--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -165,16 +165,16 @@ diary to their clinicians.  We discuss these, next.
 We imagine integrated activity diaries to be used by both clinicans
 and patients in several ways.  First, for nearly all types of
 conditions, monitoring a person's overall daily activity and sleep
-duration can easily indicate how much rest, exercise, exposure to
+duration could easily indicate how much rest, exercise, exposure to
 others, and the outside world he or she might be getting.  Daily
 records of the time(s) that a person gets up, eats, works, exercises
 and relaxes can be analysed by clincians for irregular behaviours or
 habits that might be affecting a person's well-being. For more
 specific conditions, daily measurements of a person's blood pressure,
 blood oxidation, heart rate, breathing, weight, and galvanic skin
-response could be useful for tracking progress along an clinician
-prescribed intervention, recovery from illness, or onset of new
-conditions, be used to pinpoint sources of prolonged stress.
+response could be useful for tracking progress on a prescribed
+intervention, recovery from an illness, or onset of a new conditions,
+for example, or be used to pinpoint sources of prolonged stress.
 
 Merely providing access to such activity records back to individuals
 could have direct effects on people's behavior, motivation and
