--- a/patient-clinician-workshop/pccworkshop.bib
+++ b/patient-clinician-workshop/pccworkshop.bib
@@ -30,3 +30,16 @@
   year={1989},
   publisher={Academic Press}
 }
+
+@inproceedings{webbox,
+       booktitle = {PIM 2012},
+           month = {January},
+           title = {A decentralized architecture for consolidating personal information ecosystems: The WebBox},
+          author = {Max Van Kleek and Daniel Alexander Smith and Nigel Shadbolt and m.c. schraefel},
+            year = {2012},
+            note = { Event Dates: 11 Feb 2012},
+        keywords = {Personal Information Management, HCI, Human-Computer Interaction, Semantic Web, Linked Data, User experience, Web architecture},
+             url = {http://eprints.soton.ac.uk/273200/},
+        abstract = {Most existing PIM tools either suffer from having data isolated by being siloed in an application or only interact with specific tools offered through specific services. The consequences are that what people can do with their own data becomes constrained by what services application developers afford. We propose a web-standards based architecture called WebBox to support easy maintenance and repurposing of one's own data for private, social or public publishing, collaboration and reuse. }
+}
+
