--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -261,7 +261,7 @@ EHRs tend to contain individual records for each clinical session. Therefore, ex
 prove to be unsuitable for the large volumes of data from activity diaries. However, integrating with existing EHRs
 would enable clinicians and patients to view the data in context. 
 
-To this challenge we present our own personal data platform ``WebBox.'' We have used WebBox with EHRs
+To this challenge we present our own personal data platform ``WebBox \cite{webbox}.'' We have used WebBox with EHRs
 to enable patient collected data to be augmented with hospital-provided EHR data. WebBox is able to combine
 data from multiple sources, and enables patients to make their own annotations against data, and
 to optionally share these annotations, along with their activity diaries, with their clinician. This
