--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -211,7 +211,6 @@ Hapifork & eating time, rate, frequency & (TBD) \\
 }
 \vspace{6cm}
 
-
 \section{Capturing activity diaries}
 
 The recent proliferation in personal wearable activity sensors and
@@ -223,9 +222,6 @@ worn discreetly, measure several physiological statistics
 simultaneously, and most require little maintenance. Table
 \ref{sensors} lists a variety of such sensors, currently available
 readily from online retailers.
-
-
-
 
 While few of these devices had been independently evaluated for
 accuracy for clinical use, as they have matured, several of these
@@ -248,12 +244,11 @@ metrics.
 
 \section{Storing and Representing Activity Diaries}
 
-Currently these products are designed to work in isolation, that is, to upload sensor measurements to dedicated web sites set up by each device's manufacturer.  Such sites are poorly suited for the long-term storage for the highly personal activity data for several reasons; first, none of the sites provide any long-term retention or access guarantees of user data (nor HIPAA security guarantees).  Second, it is difficult for a user to gain a unified understanding of their activity across their devices through the disparate interfaces provided by these services, due of the widely different visual and interface representations provided. Finally, many of these visualisations represent user activity in arbitrary, ``user-friendly'' units, such as ``Sleep score'', ``Fuel'', ``Zen level'', which, being not rigorously defined are difficult or impossible to compare across services.
+Currently, these products are designed to work separately by themselves, uploading sensor measurements to dedicated web sites set up by each device's manufacturer.  Such sites are poorly suited for the long-term storage for the highly personal activity data for several reasons; first, none of the sites provide any long-term retention or access guarantees of user data (nor HIPAA security guarantees).  Second, it is difficult for a user to gain a unified understanding of their activity across their devices through the disparate interfaces provided by these services, due of the widely different visual and interface representations provided. Finally, many of these visualisations represent user activity in arbitrary, ``user-friendly'' units, such as ``Sleep score'', ``Fuel'', ``Zen level'', which, being not rigorously defined are difficult or impossible to compare across services.
 
-Fortunately, many of these sites have APIs that provide access to the raw sensor data, making it feasible to access and interpret captured data.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single representation kept with their EHR.  In particular, grounding this activity data in a uniform, common taxonomy and description logic, like those provided for medical diagnoses and diseases through SNOMED-CT \cite{stearns2001snomed} and ICD-10 \cite{world1993icd}, would enable these diaries to interpretable by future clinical medical systems, such as primary care information management systems. 
+However, many of these sites have APIs that provide access to the raw sensor data, making it feasible to access and interpret captured data.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single representation kept with their EHR.  In particular, grounding this activity data in a uniform, common taxonomy and description logic, like those provided for medical diagnoses and diseases through SNOMED-CT \cite{stearns2001snomed} and ICD-10 \cite{world1993icd}, would enable these diaries to interpretable by future clinical medical systems, such as primary care information management systems. 
 
-To this challenge we bring our contribution of a common ontology for recording and encompassing patient activities, which we have begun to
-connect to SNOMED-CT, in order to enable semantic interoperability with existing systems, and provide a common vocabulary across devices.
+Since SNOWMED-CT nor ICD cover concepts pertaining to routine measured activity, we are devising a supplemental ontology for these concepts we call \emph{Activity-SENSE}.  This ontology encompasses patient activities, standard units of measure with which these activities are measured, and the ability to describe how and what kinds of sensors were used to sense the activity measured.  The intention is for Activity-SENSE records to, like those of SNOMED-CT, eventually be translatable to different languages and mapped to other similiar ontologies of behaviour.
 
 The data collected by patients' devices has the potential to create a large volume of highly structured data. Some sensors
 are collecting minute-by-minute data values form multiple sensors 24 hours a day, whereas 
