--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -248,9 +248,9 @@ Currently, these products are designed to work separately by themselves, uploadi
 
 However, many of these sites have APIs that provide access to the raw sensor data, making it feasible to access and interpret captured data.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single representation kept with their EHR.  In particular, grounding this activity data in a uniform, common taxonomy and description logic, like those provided for medical diagnoses and diseases through SNOMED-CT \cite{stearns2001snomed} and ICD-10 \cite{world1993icd}, would enable these diaries to interpretable by future clinical medical systems, such as primary care information management systems. 
 
-Since SNOWMED-CT nor ICD cover concepts pertaining to routine measured activity, we are devising a supplemental ontology for these concepts we call \emph{Activity-SENSE}.  This ontology encompasses patient activities, standard units of measure with which these activities are measured, and the ability to describe how and what kinds of sensors were used to sense the activity measured.  The intention is for Activity-SENSE records to, like those of SNOMED-CT, eventually be translatable to different languages and mapped to other similiar ontologies of behaviour.
+Since SNOWMED-CT nor ICD cover routine measured activity, we are devising a supplemental ontology for these concepts called \emph{Activity-SENSE}.  This ontology encompasses patient activities, and standard units of measure with which activities are measured, as well as the ability to describe the sensors used.  The intention is for Activity-SENSE records to, like those of SNOMED-CT, eventually be translatable to different languages and mapped to other similiar ontologies of behaviour.
 
-The data collected by patients' devices has the potential to create a large volume of highly structured data. Some sensors
+The data collected by patients' devices has the potential to create a large volumes of highly structured data. Some sensors
 are collecting minute-by-minute data values form multiple sensors 24 hours a day, whereas 
 EHRs tend to contain individual records for each clinical session. Therefore, existing methods of storing EHRs may
 prove to be unsuitable for the large volumes of data from activity diaries. However, integrating with existing EHRs
