--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -328,9 +328,13 @@ sharing...
 
 \subsection{Daniel A. Smith and Max Van Kleek}
 
+Daniel and Max are postdoctoral researchers on the SOCIAM project at the University of Southampton, and the principal architects of the WebBox
+personal information store. They have research interests in HCI, the Semantic Web and Personal Information Management.
+
+
 \subsection{Nigel R. Shadbolt}
 
-Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, Electronics and Computer Science, University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and of the Web Foundation. In 2009 the Prime Minister appointed him and Sir Tim Berners-Lee as Information Advisors to transform access to Public Sector Information, leading to the highly acclaimed data.gov.uk. He is a member of the Public Sector Transparency Board, overseeing Open Data releases across the public sector. He is Chair of the UK Government’s midata programme, which seeks to empower consumers by releasing their data back to them.
+Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and of the Web Foundation.  He and Sir Tim Berners-Lee were appointmented as Information Advisors to the UK Government, leading to \url{data.gov.uk}. He is a member of the Public Sector Transparency Board, and Chair of the UK Government’s midata programme.
 
 
 
@@ -339,7 +343,9 @@ Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of 
 WebBox is...
 
 
+\section{Acknowledgement}
 
+This work is supported under SOCIAM: The Theory and Practice of Social Machines.  The SOCIAM Project is funded by the UK Engineering and Physical Research Council (ESPRC) under grant number EP/J017728/1 and comprises the Universities of Southampton, Oxford and Edinburgh.
 
 
 
