--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -248,7 +248,7 @@ Currently, these products are designed to work separately by themselves, uploadi
 
 However, many of these sites have APIs that provide access to the raw sensor data, making it feasible to access and interpret captured data.  We propose that these APIs be used to consolidate information from among all of the services corresponding to a patient's personal health devices, into a single representation kept with their EHR.  In particular, grounding this activity data in a uniform, common taxonomy and description logic, like those provided for medical diagnoses and diseases through SNOMED-CT \cite{stearns2001snomed} and ICD-10 \cite{world1993icd}, would enable these diaries to interpretable by future clinical medical systems, such as primary care information management systems. 
 
-Since SNOWMED-CT nor ICD cover routine measured activity, we are devising a supplemental ontology for these concepts called \emph{Activity-SENSE}.  This ontology encompasses patient activities, and standard units of measure with which activities are measured, as well as the ability to describe the sensors used.  The intention is for Activity-SENSE records to, like those of SNOMED-CT, eventually be translatable to different languages and mapped to other similiar ontologies of behaviour.
+Since SNOWMED-CT nor ICD cover routine measured activity, we are devising a supplemental ontology for these concepts called \emph{Activity-SENSE}.  This ontology encompasses patient activities, and standard units of measure with which activities are measured, as well as the ability to describe the sensors used.  The intention is for Activity-SENSE records to, like those of SNOMED-CT, eventually be translatable to different languages and mapped to other similar ontologies of behaviour.
 
 \section{The WebBox EHR Platform}
 
@@ -331,7 +331,7 @@ personal information store. They have research interests in HCI, the Semantic We
 
 \subsection{Nigel R. Shadbolt}
 
-Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and of the Web Foundation.  He and Sir Tim Berners-Lee were appointmented as Information Advisors to the UK Government, leading to \url{data.gov.uk}. He is a member of the Public Sector Transparency Board, and Chair of the UK Government’s midata programme.
+Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and of the Web Foundation.  He and Sir Tim Berners-Lee were appointented as Information Advisors to the UK Government, leading to \url{data.gov.uk}. He is a member of the Public Sector Transparency Board, and Chair of the UK Government's midata programme.
 
 
 
