--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -301,23 +301,23 @@ The high-resolution data collected by activity-sensing devices, accumulated over
 %Even if personal health records or systems do not use the Semantic Web, there are existing
 %techniques to integrate with their data.
 
-\section{Privacy Controls}
+%% \section{Privacy Controls}
 
-One of the major concerns with storage of patient data is privacy. Indeed, there is also potentially
-legal requirements on storing personal health data, depending on the nature of the data being
-stored.
+%% One of the major concerns with storage of patient data is privacy. Indeed, there is also potentially
+%% legal requirements on storing personal health data, depending on the nature of the data being
+%% stored.
 
-However, it is important that control of data be sufficiently granular so that patients can choose
-to sure it with clinicians, and that clinicians can refer to it in their notes in the patient's health
-record.
+%% However, it is important that control of data be sufficiently granular so that patients can choose
+%% to sure it with clinicians, and that clinicians can refer to it in their notes in the patient's health
+%% record.
 
 
-\section{Conclusion}
+%% \section{Conclusion}
 
-By augmenting data from personal health sensors with EHRs, both patients and clinicians
-can gain insight into the lifestyle and typical activities of a patient. Challenges in implementation
-of such a system do exist, but through the use of domain ontologies and peer-to-peer
-sharing...
+%% By augmenting data from personal health sensors with EHRs, both patients and clinicians
+%% can gain insight into the lifestyle and typical activities of a patient. Challenges in implementation
+%% of such a system do exist, but through the use of domain ontologies and peer-to-peer
+%% sharing...
 
 
 
@@ -331,18 +331,18 @@ personal information store. They have research interests in HCI, the Semantic We
 
 \subsection{Nigel R. Shadbolt}
 
-Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and of the Web Foundation.  He and Sir Tim Berners-Lee were appointented as Information Advisors to the UK Government, leading to \url{data.gov.uk}. He is a member of the Public Sector Transparency Board, and Chair of the UK Government's midata programme.
+Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and the Web Foundation.  He and Sir Tim Berners-Lee were Information Advisors to the UK Government, which led to \url{data.gov.uk}. He is a member of the Public Sector Transparency Board, and Chair of the UK Government's midata programme.
 
 
 
-\section{Key Technology: WebBox}
+%% \section{Key Technology: WebBox}
 
-WebBox is...
+%% WebBox is...
 
 
 \section{Acknowledgement}
 
-This work is supported under SOCIAM: The Theory and Practice of Social Machines.  The SOCIAM Project is funded by the UK Engineering and Physical Research Council (ESPRC) under grant number EP/J017728/1 and comprises the Universities of Southampton, Oxford and Edinburgh.
+This work is supported by the SOCIAM Project (EPSRC grant EP/J017728/1).
 
 
 
