--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -331,7 +331,7 @@ personal information store. They have research interests in HCI, the Semantic We
 
 \subsection{Nigel R. Shadbolt}
 
-Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and the Web Foundation.  He and Sir Tim Berners-Lee were Information Advisors to the UK Government, which led to \url{data.gov.uk}. He is a member of the Public Sector Transparency Board, and Chair of the UK Government's midata programme.
+Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and the Web Foundation.  He is a member of the Public Sector Transparency Board, and Chair of the UK Government's midata programme. He and Sir Tim Berners-Lee are Information Advisors to the UK Government, responsible for \url{data.gov.uk}, which has released thousands of NHS health data sets.
 
 
 
