--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -252,7 +252,7 @@ Since SNOWMED-CT nor ICD cover routine measured activity, we are devising a supp
 
 \section{The WebBox EHR Platform}
 
-The high-resolution data collected by activity-sensing devices, accumulated over a long period such as a patient's lifespan, can result in a substantially greater volume of data than current EHR platforms are designed to handle. To address this deficiency, we have devised a personal data platform ``WebBox \cite{webbox}'', optimised to handle the secure, long-term storage of structured data at large volume.  Thus far, WebBox has been used to archive clinician (hospital and GP-provided) data, including both raw structured data (such as clinical diagnostic results) and traditional reports prepared by clinicians.  Being optimised for structured data capture and integration, our current work extends this platform to the aforementioned activity profiles, created from retrieving raw sensed data from digital health device APIs and translating such observations to the Activity-SENSE representation.  
+The high-resolution data collected by activity-sensing devices can result in a greater volume of data than current EHR platforms are designed to handle when  accumulated over a patient's lifetime. To address this need, we have devised  ``WebBox \cite{webbox}'', a personal data platform optimised to handle the secure, long-term storage of large volumes of structured data.  Thus far, WebBox has been used to archive clinician (hospital and GP-provided) data, including both raw structured data (such as clinical diagnostic results) and traditional reports prepared by clinicians.  Being optimised for structured data capture and integration, our current work extends this platform to the aforementioned activity profiles, created from retrieving raw sensed data from digital health device APIs and translating such observations to the Activity-SENSE representation.  
 
 %Following this, to optionally share these annotations, along with their activity diaries, with their clinician. This then enables clinicians and patients to enter into a dialog about how well the patient is doing, and any lifestyle changes they can make to better their situation.
 
@@ -331,7 +331,7 @@ personal information store. They have research interests in HCI, the Semantic We
 
 \subsection{Nigel R. Shadbolt}
 
-Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and the Web Foundation.  He and Sir Tim Berners-Lee were Information Advisors to the UK Government, which led to \url{data.gov.uk}. He is a member of the Public Sector Transparency Board, and Chair of the UK Government's midata programme.
+Nigel Shadbolt (FBCS FREng) is Professor of Artificial Intelligence and Head of the Web and Internet Science Group, at the University of Southampton. He is the Chairman and Co-Founder of the Open Data Institute, Director of the Web Science Trust, and the Web Foundation.  He and Sir Tim Berners-Lee were Information Advisors to the UK Government, which led to \url{data.gov.uk}. He is a member of the Public Sector Transparency Board, and Chair of the UK Government's midata programme.
 
 
 
