--- a/patient-clinician-workshop/pccworkshop.bib
+++ b/patient-clinician-workshop/pccworkshop.bib
@@ -1,3 +1,12 @@
+
+@article{reid1999correlation,
+  title={Correlation between wrist activity monitor and electrophysiological measures of sleep in a simulated shiftwork environment for younger and older subjects.},
+  author={Reid, K. and Dawson, D.},
+  journal={Sleep: Journal of Sleep Research \& Sleep Medicine},
+  year={1999},
+  publisher={American Academy of Sleep Medicine}
+}
+
 @inproceedings{stearns2001snomed,
   title={SNOMED clinical terms: overview of the development process and project status.},
   author={Stearns, M.Q. and Price, C. and Spackman, K.A. and Wang, A.Y.},
