--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -144,7 +144,7 @@ to see their clinician, say, once a month end up with extremely
 low-resolution samples of a patient's condition.
 
 In this position paper, we look at the potential and problems of
-augmenting the next generation of EHRs with \emph{personal activity
+augmenting the next generation of EHRs with personal \emph{activity
   diaries}, portraits of a person's dynamic condition captured at high
 temporal fidelity.  Such activity diaries are intended to supplement,
 rather than supplant, the existing diagnostic reports performed by
@@ -205,7 +205,7 @@ Zensorium Tinkne & heart rate variability, blood oxygenation, respiratory rate &
 BodyMedia CORE 2 & galvanic skin repsonse, body temperature, sleep, respiratory rate, heart rate & (TBD) \\
 Hapifork & eating time, rate, frequency & (TBD) \\ 
 \end{tabular}
-\caption{\emph{Consumer-grade activity sensors}: Activity and physiological measurememnt sensors with automatic data uplink to cloud services }
+\caption{\emph{Consumer-grade activity sensors}: Activity and physiological measurement sensors with automatic data uplink to cloud services }
 \label{sensors}
 \end{table}
 }
@@ -220,19 +220,18 @@ surging public interest in ``quantified-self''-style self-monitoring
 for self-improvement.  Many of these sensors are lightweight, can be
 worn discreetly, measure several physiological statistics
 simultaneously, and most require little maintenance. Table
-\ref{sensors} lists a variety of such sensors, currently available
-readily from online retailers.
+\ref{sensors} lists a sampling of the sensors currently available
+directly from retailers.
 
-While few of these devices had been independently evaluated for
-accuracy for clinical use, as they have matured, several of these
-manufacturers begun rigorous evaluaton of their products for achieving
-certification. For example, BodyMedia advertise themselves as
-providing the ``FDA-approved, clincally validated, most accurate
-wireless activity measurement''.  A separate study of activity-based
-sleep monitoring tools revealed that ``low cost actigraphy-based
-approaches'' correlated well with baseline (in-lab EEG-based
-measurements) for sleep duration, although less with sleep quality
-metrics.
+While few of these devices had initially been evaluated for accuracy
+or certified for clinical use, increasingly device manufacturers have
+begun to get independent certification. For example, BodyMedia
+advertise themselves as providing the ``FDA-approved, clincally
+validated, most accurate wireless activity measurement''.  A separate
+study of activity-based sleep monitoring tools revealed that ``low
+cost actigraphy-based approaches'' correlated well with baseline
+(in-lab EEG-based measurements) for sleep duration, although less with
+sleep quality metrics \cite{reid1999correlation}.
 
 %% In addition to fitness monitors, the market for quantified self sensors has
 %% expanded into areas of personal health. For example, there are sensors for
